memoOrg/force-app/main/default/objects/Car__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Name of car brand</description>
    <label>Brand</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>