memoOrg/force-app/main/default/objects/Car__c/fields/Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship__c</fullName>
    <description>Owner (Contact) of the car</description>
    <label>Contact Relationship</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>