memoOrg/force-app/main/default/objects/Car__c/fields/Llanta__c.field-meta.xml
<CustomField>
    <fullName>Llanta__c</fullName>
    <label>Llanta</label>
    <referenceTo>Llanta__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>