memoOrg/force-app/main/default/objects/Car__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model of the car</description>
    <label>Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>