memoOrg/force-app/main/default/objects/Car__c/recordTypes/Record_2.recordType-meta.xml
<RecordType>
    <fullName>Record_2</fullName>
    <active>true</active>
    <label>Record 2</label>
</RecordType>