memoOrg/force-app/main/default/objects/Car__c/recordTypes/Record_3.recordType-meta.xml
<RecordType>
    <fullName>Record_3</fullName>
    <active>false</active>
    <label>Record 3</label>
</RecordType>