memoOrg/force-app/main/default/objects/Car__c/listViews/La_Nueva_Lista.listView-meta.xml
<ListView>
    <fullName>La_Nueva_Lista</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>La Nueva Lista</label>
</ListView>